@@ -1,18 +1,18 @@
 package us.dot.its.jpo.ode.api;
 
+import com.fasterxml.jackson.annotation.JsonInclude;
+
 import org.apache.kafka.clients.consumer.ConsumerConfig;
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.beans.factory.annotation.Value;
 import org.springframework.boot.context.properties.ConfigurationProperties;
-import com.fasterxml.jackson.annotation.JsonInclude.Include;
-import com.fasterxml.jackson.databind.ObjectMapper;
-import com.fasterxml.jackson.databind.SerializationFeature;
-import com.fasterxml.jackson.datatype.jsr310.JavaTimeModule;
-
-import us.dot.its.jpo.conflictmonitor.AlwaysContinueProductionExceptionHandler;
-import us.dot.its.jpo.geojsonconverter.DateJsonMapper;
 import org.springframework.context.annotation.Bean;
 import org.springframework.context.annotation.Configuration;
+
+import tools.jackson.databind.ObjectMapper;
+import tools.jackson.databind.cfg.DateTimeFeature;
+import tools.jackson.databind.json.JsonMapper;
+import us.dot.its.jpo.conflictmonitor.AlwaysContinueProductionExceptionHandler;
 
 import java.util.ArrayList;
 import java.util.HashSet;
@@ -38,13 +38,11 @@ import org.apache.kafka.streams.errors.LogAndContinueExceptionHandler;
 import org.apache.kafka.streams.processor.LogAndSkipOnInvalidTimestamp;
 
 import java.nio.file.Path;
-import java.nio.file.Paths;
 
 import java.net.InetAddress;
 import java.net.UnknownHostException;
 
 import org.springframework.boot.info.BuildProperties;
-import org.springframework.data.web.config.SpringDataJacksonConfiguration;
 
 @Configuration
 @ConfigurationProperties("conflict.monitor.api")
@@ -134,7 +132,7 @@ public class ConflictMonitorApiProperties {
     /**
      * Returns the Conflict Monitor REST server URL. This URL is unauthenticated,
      * and only accessible internally.
-     * 
+     *
      * @return
      */
     public String getCmServerURL() {
@@ -292,12 +290,12 @@ public class ConflictMonitorApiProperties {
 
     @Bean
     public ObjectMapper defaultMapper() {
-        ObjectMapper objectMapper = DateJsonMapper.getInstance();
-        objectMapper.registerModule(new JavaTimeModule());
-        objectMapper.registerModule(new SpringDataJacksonConfiguration.PageModule(null));
-        objectMapper.configure(SerializationFeature.WRITE_DATES_AS_TIMESTAMPS, false);
-        objectMapper.setSerializationInclusion(Include.NON_NULL);
-        return objectMapper;
+        return JsonMapper.builder()
+                .disable(DateTimeFeature.WRITE_DATES_AS_TIMESTAMPS)
+                .changeDefaultPropertyInclusion(incl ->
+                        incl.withValueInclusion(JsonInclude.Include.NON_NULL)
+                )
+                .build();
     }
 
     @PostConstruct
@@ -307,7 +305,7 @@ public class ConflictMonitorApiProperties {
         logger.info("artifactId: {}", buildProperties.getArtifact());
         logger.info("version: {}", version);
 
-        uploadLocations.add(Paths.get(uploadLocationRoot));
+        uploadLocations.add(Path.of(uploadLocationRoot));
 
         String hostname;
         try {
@@ -359,7 +357,7 @@ public class ConflictMonitorApiProperties {
                 dockerIp = "localhost";
             }
             dockerHostIP = dockerIp;
-            connectURL = String.format("http://%s:%s", dockerHostIP, DEFAULT_CONNECT_PORT);
+            connectURL = "http://%s:%s".formatted(dockerHostIP, DEFAULT_CONNECT_PORT);
         }
 
         List<String> asList = Arrays.asList(this.getKafkaTopicsDisabled());
