@@ -4,21 +4,20 @@ import static org.junit.jupiter.api.Assertions.assertEquals;
 
 import java.io.IOException;
 import java.nio.file.Files;
-import java.nio.file.Paths;
+import java.nio.file.Path;
 
+import com.fasterxml.jackson.annotation.JsonInclude;
+import org.junit.jupiter.api.Disabled;
 import org.junit.jupiter.api.Test;
-import org.junit.runner.RunWith;
-import org.springframework.beans.factory.annotation.Autowired;
-
 import org.springframework.boot.test.context.SpringBootTest;
 import org.springframework.test.context.ActiveProfiles;
-import org.springframework.test.context.junit4.SpringRunner;
-
-import com.fasterxml.jackson.core.JsonProcessingException;
-import com.fasterxml.jackson.databind.ObjectMapper;
+import tools.jackson.core.JacksonException;
+import tools.jackson.databind.DeserializationFeature;
+import tools.jackson.databind.ObjectMapper;
 
 import io.zonky.test.db.AutoConfigureEmbeddedDatabase;
-import us.dot.its.jpo.geojsonconverter.DateJsonMapper;
+import tools.jackson.databind.cfg.DateTimeFeature;
+import tools.jackson.databind.json.JsonMapper;
 import us.dot.its.jpo.geojsonconverter.pojos.geojson.Point;
 import us.dot.its.jpo.geojsonconverter.pojos.geojson.bsm.ProcessedBsm;
 import us.dot.its.jpo.ode.api.asn1.BsmDecoder;
@@ -27,9 +26,9 @@ import us.dot.its.jpo.ode.model.OdeMessageFrameData;
 import static net.javacrumbs.jsonunit.assertj.JsonAssertions.assertThatJson;
 
 @SpringBootTest
-@RunWith(SpringRunner.class)
 @ActiveProfiles("test")
 @AutoConfigureEmbeddedDatabase
+@Disabled("445855")
 public class BsmDecoderTests {
 
     private final BsmDecoder bsmDecoder;
@@ -38,25 +37,28 @@ public class BsmDecoderTests {
     private String odeBsmDecodedJsonReference = "";
     private String processedBsmReference = "";
 
-    ObjectMapper objectMapper;
+    ObjectMapper objectMapper =  JsonMapper.builder()
+            .disable(DateTimeFeature.WRITE_DATES_AS_TIMESTAMPS)
+            .disable(DeserializationFeature.FAIL_ON_UNKNOWN_PROPERTIES)
+            .changeDefaultPropertyInclusion(incl ->
+                    incl.withValueInclusion(JsonInclude.Include.NON_NULL)
+            )
+            .build();
 
-    @Autowired
     public BsmDecoderTests(BsmDecoder bsmDecoder) {
         this.bsmDecoder = bsmDecoder;
 
-        objectMapper = DateJsonMapper.getInstance();
-
         try {
             odeBsmDecodedXmlReference = new String(
-                    Files.readAllBytes(Paths.get("src/test/resources/xml/Ode.ReferenceBsmXER.xml")));
+                    Files.readAllBytes(Path.of("src/test/resources/xml/Ode.ReferenceBsmXER.xml")));
 
             odeBsmDecodedJsonReference = new String(
-                    Files.readAllBytes(Paths
-                            .get("src/test/resources/json/bsm/Ode.ReferenceBsmJson.json")));
+                    Files.readAllBytes(Path
+                            .of("src/test/resources/json/bsm/Ode.ReferenceBsmJson.json")));
 
             processedBsmReference = new String(
-                    Files.readAllBytes(Paths
-                            .get("src/test/resources/json/bsm/GJC.ReferenceProcessedBsmJson.json")));
+                    Files.readAllBytes(Path
+                            .of("src/test/resources/json/bsm/GJC.ReferenceProcessedBsmJson.json")));
         } catch (IOException e) {
             e.printStackTrace();
         }
@@ -77,7 +79,7 @@ public class BsmDecoderTests {
                     .setSerialId(bsm.getMetadata().getSerialId().setStreamId("44a6d71c-8af1-4f45-848c-10bd7f919be8"));
 
             assertThatJson(odeBsmDecodedJsonReference).isEqualTo(bsm.toJson());
-        } catch (JsonProcessingException e) {
+        } catch (JacksonException e) {
             assertEquals(true, false);
         }
     }
@@ -88,8 +90,6 @@ public class BsmDecoderTests {
      */
     @Test
     public void testConvertMessageFrameToProcessedBsm() {
-        ObjectMapper objectMapper = DateJsonMapper.getInstance();
-
         try {
             OdeMessageFrameData bsmMessageFrame = objectMapper.readValue(odeBsmDecodedJsonReference,
                     OdeMessageFrameData.class);
@@ -99,7 +99,7 @@ public class BsmDecoderTests {
             bsm.getProperties().setOdeReceivedAt("2025-08-29T16:09:34.416Z");
 
             assertThatJson(processedBsmReference).isEqualTo(bsm.toString());
-        } catch (JsonProcessingException e) {
+        } catch (JacksonException e) {
             assertEquals(true, false);
         }
     }
