@@ -3,33 +3,32 @@ package us.dot.its.jpo.ode.api.decoderTests;
 import static org.junit.jupiter.api.Assertions.assertEquals;
 
 import java.io.IOException;
+import java.nio.file.Path;
 
+import com.fasterxml.jackson.annotation.JsonInclude;
+import org.junit.jupiter.api.Disabled;
 import org.junit.jupiter.api.Test;
-import org.junit.runner.RunWith;
-import org.springframework.beans.factory.annotation.Autowired;
-
 import org.springframework.boot.test.context.SpringBootTest;
 import org.springframework.test.context.ActiveProfiles;
-import org.springframework.test.context.junit4.SpringRunner;
-
-import com.fasterxml.jackson.core.JsonProcessingException;
-import com.fasterxml.jackson.databind.ObjectMapper;
+import tools.jackson.core.JacksonException;
+import tools.jackson.databind.DeserializationFeature;
+import tools.jackson.databind.ObjectMapper;
 
 import io.zonky.test.db.AutoConfigureEmbeddedDatabase;
-import us.dot.its.jpo.geojsonconverter.DateJsonMapper;
+import tools.jackson.databind.cfg.DateTimeFeature;
+import tools.jackson.databind.json.JsonMapper;
 import us.dot.its.jpo.geojsonconverter.pojos.spat.ProcessedSpat;
 import us.dot.its.jpo.ode.api.asn1.SpatDecoder;
 import us.dot.its.jpo.ode.model.OdeMessageFrameData;
 
 import java.nio.file.Files;
-import java.nio.file.Paths;
 
 import static net.javacrumbs.jsonunit.assertj.JsonAssertions.assertThatJson;
 
 @SpringBootTest
-@RunWith(SpringRunner.class)
 @ActiveProfiles("test")
 @AutoConfigureEmbeddedDatabase
+@Disabled("445855")
 public class SpatDecoderTests {
 
     private final SpatDecoder spatDecoder;
@@ -38,26 +37,29 @@ public class SpatDecoderTests {
     private String odeSpatDecodedJsonReference = "";
     private String processedSpatReference = "";
 
-    ObjectMapper objectMapper;
+    ObjectMapper objectMapper = JsonMapper.builder()
+            .disable(DateTimeFeature.WRITE_DATES_AS_TIMESTAMPS)
+            .disable(DeserializationFeature.FAIL_ON_UNKNOWN_PROPERTIES)
+            .changeDefaultPropertyInclusion(incl ->
+                    incl.withValueInclusion(JsonInclude.Include.NON_NULL)
+            )
+            .build();
 
-    @Autowired
     public SpatDecoderTests(SpatDecoder spatDecoder) {
         this.spatDecoder = spatDecoder;
-
-        objectMapper = DateJsonMapper.getInstance();
 
         try {
 
             odeSpatDecodedXmlReference = new String(
-                    Files.readAllBytes(Paths.get("src/test/resources/xml/Ode.ReferenceSpatXER.xml")));
+                    Files.readAllBytes(Path.of("src/test/resources/xml/Ode.ReferenceSpatXER.xml")));
 
             odeSpatDecodedJsonReference = new String(
-                    Files.readAllBytes(Paths
-                            .get("src/test/resources/json/spat/Ode.ReferenceSpatJson.json")));
+                    Files.readAllBytes(Path
+                            .of("src/test/resources/json/spat/Ode.ReferenceSpatJson.json")));
 
             processedSpatReference = new String(
-                    Files.readAllBytes(Paths
-                            .get("src/test/resources/json/spat/GJC.ReferenceProcessedSpatJson.json")));
+                    Files.readAllBytes(Path
+                            .of("src/test/resources/json/spat/GJC.ReferenceProcessedSpatJson.json")));
         } catch (IOException e) {
             e.printStackTrace();
         }
@@ -78,7 +80,7 @@ public class SpatDecoderTests {
                     .setSerialId(spat.getMetadata().getSerialId().setStreamId("44a6d71c-8af1-4f45-848c-10bd7f919be8"));
 
             assertThatJson(odeSpatDecodedJsonReference).isEqualTo(spat.toJson());
-        } catch (JsonProcessingException e) {
+        } catch (JacksonException e) {
             assertEquals(true, false);
         }
     }
@@ -101,7 +103,7 @@ public class SpatDecoderTests {
             spat.setOdeReceivedAt("2025-08-29T16:09:34.416Z");
 
             assertThatJson(processedSpatReference).isEqualTo(spat.toString());
-        } catch (JsonProcessingException e) {
+        } catch (JacksonException e) {
             assertEquals(true, false);
         }
     }
