@@ -4,29 +4,28 @@ import static org.junit.jupiter.api.Assertions.assertEquals;
 
 import java.io.IOException;
 import java.nio.file.Files;
-import java.nio.file.Paths;
+import java.nio.file.Path;
 
+import com.fasterxml.jackson.annotation.JsonInclude;
+import org.junit.jupiter.api.Disabled;
 import org.junit.jupiter.api.Test;
-import org.junit.runner.RunWith;
-import org.springframework.beans.factory.annotation.Autowired;
-
 import org.springframework.boot.test.context.SpringBootTest;
 import org.springframework.test.context.ActiveProfiles;
-import org.springframework.test.context.junit4.SpringRunner;
-
-import com.fasterxml.jackson.core.JsonProcessingException;
-import com.fasterxml.jackson.databind.ObjectMapper;
+import tools.jackson.core.JacksonException;
+import tools.jackson.databind.DeserializationFeature;
+import tools.jackson.databind.ObjectMapper;
 
 import io.zonky.test.db.AutoConfigureEmbeddedDatabase;
-import us.dot.its.jpo.geojsonconverter.DateJsonMapper;
+import tools.jackson.databind.cfg.DateTimeFeature;
+import tools.jackson.databind.json.JsonMapper;
 import us.dot.its.jpo.ode.api.asn1.SsmDecoder;
 import us.dot.its.jpo.ode.model.OdeMessageFrameData;
 import static net.javacrumbs.jsonunit.assertj.JsonAssertions.assertThatJson;
 
 @SpringBootTest
-@RunWith(SpringRunner.class)
 @ActiveProfiles("test")
 @AutoConfigureEmbeddedDatabase
+@Disabled("445855")
 public class SsmDecoderTests {
 
     private final SsmDecoder ssmDecoder;
@@ -34,21 +33,24 @@ public class SsmDecoderTests {
     private String odeSsmDecodedXmlReference = "";
     private String odeSsmDecodedJsonReference = "";
 
-    ObjectMapper objectMapper;
+    ObjectMapper objectMapper = JsonMapper.builder()
+            .disable(DateTimeFeature.WRITE_DATES_AS_TIMESTAMPS)
+            .disable(DeserializationFeature.FAIL_ON_UNKNOWN_PROPERTIES)
+            .changeDefaultPropertyInclusion(incl ->
+                    incl.withValueInclusion(JsonInclude.Include.NON_NULL)
+            )
+            .build();
 
-    @Autowired
     public SsmDecoderTests(SsmDecoder ssmDecoder) {
         this.ssmDecoder = ssmDecoder;
 
-        objectMapper = DateJsonMapper.getInstance();
-
         try {
             odeSsmDecodedXmlReference = new String(
-                    Files.readAllBytes(Paths.get("src/test/resources/xml/Ode.ReferenceSsmXER.xml")));
+                    Files.readAllBytes(Path.of("src/test/resources/xml/Ode.ReferenceSsmXER.xml")));
 
             odeSsmDecodedJsonReference = new String(
-                    Files.readAllBytes(Paths
-                            .get("src/test/resources/json/ssm/Ode.ReferenceSsmJson.json")));
+                    Files.readAllBytes(Path
+                            .of("src/test/resources/json/ssm/Ode.ReferenceSsmJson.json")));
 
         } catch (IOException e) {
             e.printStackTrace();
@@ -70,7 +72,7 @@ public class SsmDecoderTests {
                     .setSerialId(ssm.getMetadata().getSerialId().setStreamId("44a6d71c-8af1-4f45-848c-10bd7f919be8"));
 
             assertThatJson(odeSsmDecodedJsonReference).isEqualTo(ssm.toJson());
-        } catch (JsonProcessingException e) {
+        } catch (JacksonException e) {
             assertEquals(true, false);
         }
     }
